# CS241

./: LICENSE
CS241_project/: CMakeLists.txt  README.md
CS241_project/CS241_project.app/Contents/: Info.plist
CS241_project/CS241_project.app/Contents/MacOS/: CS241_project
CS241_project/src/: CS241_project.pro  Worker.cpp  Worker.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc.depends  qrc_qml.cpp  taskMap.html
